I am facing a new issue I have not seen before: my html file which I have been running is now stuck in a previous version. I noticed that changing the title from Lucrative Locust Bank to something else did not commit that change. Likewise changing how the animation plays has not changed. It became most noticeable with the lack of new console log entries. I had expected certain messages or some errors, but neither have shown up. I am worried as I can no longer verify whether my code is working. I will for now reset my computer...

--- a/mining.css
+++ b/mining.css
@@ -88,7 +88,6 @@
     top: -60%;
     left: 50%;
     z-index: 4;
-    display: none;
 }
 #Cord{
     position: absolute;
@@ -97,7 +96,6 @@
     top: -60%;
     left: 50%;
     z-index: 3;
-    display: none;
 }
 
 
